--- a/Pre_processing.ipynb
+++ b/Pre_processing.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Pre-processing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOp5jLUJE7oeuIN6BwzpIJl",
+      "mount_file_id": "1cJmp34yaqb-QqeNsKJURie4SiYAYeOCt",
+      "authorship_tag": "ABX9TyN5Jefg4ryw7JVUv4MUr3p+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +33,21 @@
         "colab": {}
       },
       "source": [
-        "test"
+        "import pandas as pd\n",
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1U8kw9REZQQJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.read_csv()"
       ],
       "execution_count": 0,
       "outputs": []
