--- a/Pre_processing.ipynb
+++ b/Pre_processing.ipynb
@@ -61,8 +61,11 @@
         "# Importing the data\n",
         "train_controls = pd.read_csv('train_controls_transformed.csv?dl=0')\n",
         "train_cases = pd.read_csv('train_cases_transformed.csv?dl=0')\n",
-        "train_controls = pd.read_csv('holdout_controls_transformed.csv?dl=0')\n",
-        "train_cases = pd.read_csv('holdout_cases_transformed.csv?dl=0')"
+        "holdout_controls = pd.read_csv('holdout_controls_transformed.csv?dl=0')\n",
+        "holdout_cases = pd.read_csv('holdout_cases_transformed.csv?dl=0')\n",
+        "\n",
+        "# Combine cases and controls\n",
+        "train_data = pd.concat(train_controls, train_cases)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -75,7 +78,19 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Training the RNN\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.models import Sequential,Model\n",
+        "from tensorflow.keras.layers import Dense, Activation, Dropout, Embedding, Input, Dropout, LSTM\n",
+        "\n",
+        "num_timesteps = train_data.shape[1]\n",
+        "\n",
+        "input = Input(shape=(num_timesteps, ))\n",
+        "x = Embedding(input_dim = vocab_size, output_dim = 100, name='embedding')(input)\n",
+        "x = LSTM(units = 128)(x)\n",
+        "x = Dense(num_classes, activation='softmax')(x)\n",
+        "\n",
+        "model = Model(inputs=input, outputs=x)"
       ],
       "execution_count": 0,
       "outputs": []
