--- a/Pre_processing.ipynb
+++ b/Pre_processing.ipynb
@@ -62,8 +62,19 @@
         "train_controls = pd.read_csv('train_controls_transformed.csv?dl=0')\n",
         "train_cases = pd.read_csv('train_cases_transformed.csv?dl=0')\n",
         "holdout_controls = pd.read_csv('holdout_controls_transformed.csv?dl=0')\n",
-        "holdout_cases = pd.read_csv('holdout_cases_transformed.csv?dl=0')\n",
-        "\n",
+        "holdout_cases = pd.read_csv('holdout_cases_transformed.csv?dl=0')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VG2PEOHLgMLO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "# Combine cases and controls\n",
         "train_data = pd.concat(train_controls, train_cases)"
       ],
@@ -88,7 +99,7 @@
         "input = Input(shape=(num_timesteps, ))\n",
         "x = Embedding(input_dim = vocab_size, output_dim = 100, name='embedding')(input)\n",
         "x = LSTM(units = 128)(x)\n",
-        "x = Dense(num_classes, activation='softmax')(x)\n",
+        "x = Dense(2, activation='softmax')(x) # 2 because this is a classification problem\n",
         "\n",
         "model = Model(inputs=input, outputs=x)"
       ],
