--- a/Pre_processing.ipynb
+++ b/Pre_processing.ipynb
@@ -76,10 +76,40 @@
       },
       "source": [
         "# Combine cases and controls\n",
-        "train_data = pd.concat(train_controls, train_cases)"
+        "train_data = pd.concat([train_controls, train_cases])"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AJmoXxWVh96e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "2260e401-eeae-4d45-baec-d5f19edf4a71"
+      },
+      "source": [
+        "# Check sizes make sense\n",
+        "print(train_controls.shape)\n",
+        "print(train_cases.shape)\n",
+        "print(train_data.shape)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(693, 112321)\n",
+            "(172, 112321)\n",
+            "(865, 222527)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -89,7 +119,7 @@
         "colab": {}
       },
       "source": [
-        "# Training the RNN\n",
+        "# Training the RNN for binary classification\n",
         "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.models import Sequential,Model\n",
         "from tensorflow.keras.layers import Dense, Activation, Dropout, Embedding, Input, Dropout, LSTM\n",
@@ -99,7 +129,7 @@
         "input = Input(shape=(num_timesteps, ))\n",
         "x = Embedding(input_dim = vocab_size, output_dim = 100, name='embedding')(input)\n",
         "x = LSTM(units = 128)(x)\n",
-        "x = Dense(2, activation='softmax')(x) # 2 because this is a classification problem\n",
+        "x = Dense(2, activation='sigmoid')(x) # 2 because this is a binary classification problem\n",
         "\n",
         "model = Model(inputs=input, outputs=x)"
       ],
