--- a/Pre_processing.ipynb
+++ b/Pre_processing.ipynb
@@ -59,10 +59,11 @@
       },
       "source": [
         "# Importing the data\n",
-        "train_controls = pd.read_csv('train_controls_transformed.csv?dl=0')\n",
-        "train_cases = pd.read_csv('train_cases_transformed.csv?dl=0')\n",
-        "holdout_controls = pd.read_csv('holdout_controls_transformed.csv?dl=0')\n",
-        "holdout_cases = pd.read_csv('holdout_cases_transformed.csv?dl=0')"
+        "colnames = pd.array(range(1,112321))\n",
+        "train_controls = pd.read_csv('train_controls_transformed.csv?dl=0', names = colnames, header = None)\n",
+        "train_cases = pd.read_csv('train_cases_transformed.csv?dl=0', names = colnames, header = None)\n",
+        "holdout_controls = pd.read_csv('holdout_controls_transformed.csv?dl=0', names = colnames, header = None)\n",
+        "holdout_cases = pd.read_csv('holdout_cases_transformed.csv?dl=0', names = colnames, header = None)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -86,30 +87,16 @@
       "metadata": {
         "id": "AJmoXxWVh96e",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "2260e401-eeae-4d45-baec-d5f19edf4a71"
+        "colab": {}
       },
       "source": [
-        "# Check sizes make sense\n",
+        "# Check that sizes make sense\n",
         "print(train_controls.shape)\n",
         "print(train_cases.shape)\n",
         "print(train_data.shape)"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(693, 112321)\n",
-            "(172, 112321)\n",
-            "(865, 222527)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -127,8 +114,7 @@
         "num_timesteps = train_data.shape[1]\n",
         "\n",
         "input = Input(shape=(num_timesteps, ))\n",
-        "x = Embedding(input_dim = vocab_size, output_dim = 100, name='embedding')(input)\n",
-        "x = LSTM(units = 128)(x)\n",
+        "x = LSTM(units = 128)(input)\n",
         "x = Dense(2, activation='sigmoid')(x) # 2 because this is a binary classification problem\n",
         "\n",
         "model = Model(inputs=input, outputs=x)"
