--- a/Pre_processing.ipynb
+++ b/Pre_processing.ipynb
@@ -59,7 +59,7 @@
       },
       "source": [
         "# Importing the data\n",
-        "colnames = pd.array(range(1,112321))\n",
+        "colnames = pd.array(range(1,112321)) # The number of time intervals in the database\n",
         "train_controls = pd.read_csv('train_controls_transformed.csv?dl=0', names = colnames, header = None)\n",
         "train_cases = pd.read_csv('train_cases_transformed.csv?dl=0', names = colnames, header = None)\n",
         "holdout_controls = pd.read_csv('holdout_controls_transformed.csv?dl=0', names = colnames, header = None)\n",
@@ -87,7 +87,11 @@
       "metadata": {
         "id": "AJmoXxWVh96e",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "5080ae3b-1538-4cf5-fbb1-11b97cc3131a"
       },
       "source": [
         "# Check that sizes make sense\n",
@@ -95,8 +99,18 @@
         "print(train_cases.shape)\n",
         "print(train_data.shape)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(694, 112320)\n",
+            "(694, 112320)\n",
+            "(1388, 112320)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
