--- a/Pre_processing.ipynb
+++ b/Pre_processing.ipynb
@@ -5,12 +5,14 @@
     "colab": {
       "name": "Pre-processing.ipynb",
       "provenance": [],
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -45,7 +47,7 @@
         "colab": {}
       },
       "source": [
-        "# Copying the data from dropbox\n"
+        "# Copying the data from dropbox: copy links using wget here."
       ],
       "execution_count": 0,
       "outputs": []
@@ -71,7 +73,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VG2PEOHLgMLO",
+        "id": "7-Qzbwjqo2hA",
         "colab_type": "code",
         "colab": {}
       },
@@ -85,28 +87,42 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "XoVdly5bpIGb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Re-shape the data for Keras\n",
+        "train_data_reshaped = train_data.values.reshape(train_data.values.shape[0],train_data.values.shape[1],1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "AJmoXxWVh96e",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "5080ae3b-1538-4cf5-fbb1-11b97cc3131a"
+        "outputId": "489a3e7d-6930-4c74-ea67-c48dcfff7902"
       },
       "source": [
         "# Check that sizes make sense\n",
         "print(train_controls.shape)\n",
         "print(train_cases.shape)\n",
-        "print(train_data.shape)"
+        "print(train_data_reshaped.shape)"
       ],
-      "execution_count": 32,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "(694, 1, 112320)\n",
             "(694, 112320)\n",
-            "(694, 112320)\n",
-            "(1388, 112320)\n"
+            "(1388, 112320, 1)\n"
           ],
           "name": "stdout"
         }
@@ -127,11 +143,10 @@
         "\n",
         "num_timesteps = train_data.shape[1]\n",
         "\n",
-        "input = Input(shape=(num_timesteps, ))\n",
-        "x = LSTM(units = 128)(input)\n",
+        "x = LSTM(units = 1)(train_data_reshaped) # units = 128 by default\n",
         "x = Dense(2, activation='sigmoid')(x) # 2 because this is a binary classification problem\n",
         "\n",
-        "model = Model(inputs=input, outputs=x)"
+        "model = Model(inputs=num_timesteps, outputs=x)"
       ],
       "execution_count": 0,
       "outputs": []
